<resources>
    <string name="app_name">AtividadeAvaliativa1</string>
    <string name="Texto_Tela_Principal">Vacina Sim - POA</string>
    <string name="Image_Logo">Logo</string>
    <string name="Btn_GetStart">Entrar</string>
    <string name="Btn_Login">Login</string>
    <string name="Btn_OpenTodosList">Todos</string>
    <string name="Btn_OpenPostList">Posts</string>
    <string name="Btn_OpenComentsList">Coments</string>
    <string name="Btn_OpenAlbumList">Albums</string>
    <string name="Btn_OpenPhotosList">Photos</string>
    <string name="Login">Cpf</string>
    <string name="Senha">Senha</string>
    <string name="BoasVindas">Bem vindo ao aplicativo de consulta pontos de vacinação da Covid-19</string>
    <string name="CpfUsuario">Usuário logado:</string>
    <string name="TitleDetail">Detalhe Item</string>
    <string name="Completed">Completed</string>
    <string name="Image_Load">Image:</string>
</resources>